<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">TriTracker</string>
	<string name="action_settings">Settings</string>
	<string name="stopid">Enter Stop ID</string>
	<string name="action_search">Find Stops</string>
	<string name="title_activity_display_message">NUSDFSF</string>
	<string name="action_history">Stop History</string>
	<string name="action_favorite">Add/Remove From Favorites</string>
	<string name="action_order_stop">Sort Stops</string>
	<string name="action_clear">Clear History</string>
	<string name="action_order_buss">Sort Busses</string>
	<string name="fav_empty">No Favorites</string>
	<string name="hist_emtpy">No History</string>
	<string name="data_path">TriTrackerData.json</string>
	<string name="appid">33F1CF006B33C60A8242EDA0E</string>
	<string name="undo">Undo</string>
	<string name="title_activity_history_view">History</string>
	<string name="title_activity_favorites_view">Favorites</string>
	<string name="no_stop">Invalid Stop ID</string>
	<string name="no_stop_m">There is no stop with the id: </string>
	<string name="title_activity_loading_overlay">LoadingOverlay</string>
	<string name="fav_desc">Add/Remove from favorites</string>
	<string name="action_create_reminder">Set Arrival Reminder</string>
	<string name="action_reminder">Set/Edit Reminder</string>
	<string name="action_view_alerts">View Relevant Alerts</string>
	<string name="action_edit_reminder">Edit Arrival Reminder</string>
	<string name="action_cancel_reminder">Cancel Arrival Reminder</string>
	<string name="action_sort_list">Sort this list</string>
	<string name="action_cancel_reminder">Cancel Arrival Reminder</string>
	<string name="action_cancel_reminder">Cancel Arrival Reminder</string>
	<string name="action_map">Find Nearby Stops</string>
	<string name="action_find_stops">Show This Stop on the map</string>
	<string name="content">A Picture</string>
	<string name="no_arrivals">No arrival information available.</string>
	<string name="title_activity_alert_details">Alert Details</string>
	<string name="affected_line">Affected Line: </string>
	<string name="title_activity_settings">Settings</string>
	<string name="refresh_label">Auto-refresh delay: </string>
	<string name="refresh_hint">Delay in Seconds</string>
	<string name="radius_label">Map Search Radius: </string>
	<string name="radius_hint">Radius in Feet</string>
	<string name="title_activity_favorites">Favorites</string>
	<string name="title_activity_undo_popup">UndoPopup</string>
	<string name="title_activity_test">TestActivity</string>
	<string name="title_activity_map">Map</string>

</resources>