<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".SettingsActivity" >

	<TextView
		android:id="@+id/Label1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:textSize="20sp"
		android:text="@string/refresh_label" />
	
	<ImageView
		android:id="@+id/help1"
		android:layout_width="20dp"
		android:layout_height="20dp"
		android:onClick="helpRefresh"
		android:layout_alignParentRight="true"
		android:layout_alignBottom="@+id/Label1"
		android:src="@drawable/ic_action_help2"
		android:contentDescription="@string/content"
		/>

	<EditText
		android:id="@+id/Delay"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/Label1"
		android:hint="@string/refresh_hint"
		android:inputType="number"/>
	
	<TextView
		android:id="@+id/Label2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/Delay"
		android:textSize="20sp"
		android:text="@string/radius_label" />
	
	<ImageView
		android:id="@+id/help2"
		android:layout_width="20dp"
		android:layout_height="20dp"
		android:onClick="helpRadius"
		android:layout_alignParentRight="true"
		android:layout_alignBottom="@+id/Label2"
		android:src="@drawable/ic_action_help2"
		android:contentDescription="@string/content"
		/>

	<EditText
		android:id="@+id/Radius"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/Label2"
		android:hint="@string/radius_hint"
		android:inputType="number"/>

</RelativeLayout>